added bulma/react navbar

--- a/KyleFujishige/home/templates/home.html
+++ b/KyleFujishige/home/templates/home.html
@@ -4,57 +4,20 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <title>Kyle Fujishige</title>
     </head>
     <body>
         {% load static %}
         <div class="container">
-            <nav class="navbar navbar-expand navbar-light">
-                <ul class="navbar-nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="work-tab" href="#">Work Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="about-me-tab" href="#">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="projects-tab" href="#">Projects</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="row justify-content-center h-100 w-100">
-                <img id="loading-image" src="{% static 'gifs/loading.gif' %}" alt="Loading..." />
-            </div>
+            <div id="nav_container"></div>
         </div>
+            
     </body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-        $('.nav-item a').on('click', function (e) {
-            e.preventDefault()
-            $('.nav-item a').attr("class", "nav-link");
-            $(this).attr("class", "nav-link active");
-        })
-    </script>
-    <style>
-        .navbar-nav {
-            display:table;
-            width:100%;
-            margin: 0;
-        }
-        .navbar-nav > li {
-            float:none;
-            display:table-cell;
-            text-align:center;
-        }
-    </style>
-
-    </html>
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <!-- Load our React component. -->
+    <script src="{% static 'js/components/nav_bar.js' %}" homeUrl="{% url 'home' %}" teaIconUrl="{% static 'icons/teabag.svg' %}"></script>
+</html>
