--- a/KyleFujishige/home/templates/index.html
+++ b/KyleFujishige/home/templates/index.html
@@ -17,8 +17,13 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Load our React component. -->
-    {{body|json_script:"nav-data"}}
+    {{navData|json_script:"nav-data"}}
+    {{homePosts|json_script:"home-posts"}}
+    {{aboutMePosts|json_script:"about-me-posts"}}
+    {{projectPosts|json_script:"project-posts"}}
+    {{workExpPosts|json_script:"work-exp-posts"}}
     <script id="static-url" type="application/json">{"url":"{% static '' %}"}</script>
     <script type="module" src="{% static 'js/app.js' %}"></script>
 </html>
