added contacts tab

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -24,6 +24,7 @@
     {{aboutMePosts|json_script:"about-me-posts"}}
     {{projectPosts|json_script:"project-posts"}}
     {{workExpPosts|json_script:"work-exp-posts"}}
+    {{contactPosts|json_script:"contact-posts"}}
     <script id="static-url" type="application/json">{"url":"{% static '' %}"}</script>
     <script type="module" src="{% static 'js/app.js' %}"></script>
 </html>
