URL routing setup

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -17,7 +17,7 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src='https://unpkg.com/react-router-dom@5.1.0/umd/react-router-dom.min.js'></script>
     <!-- Load our React component. -->
     {{navData|json_script:"nav-data"}}
     {{homePosts|json_script:"home-posts"}}
