--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -15,8 +15,8 @@
     </body>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react@17/umd/react.production.js" crossorigin></script>  
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.js" crossorigin></script>
     <script src='https://unpkg.com/react-router-dom@5.1.0/umd/react-router-dom.min.js'></script>
     <!-- Load our React component. -->
     {{navData|json_script:"nav-data"}}
