--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -18,6 +18,7 @@
     <script src="https://unpkg.com/react@17/umd/react.production.js" crossorigin></script>  
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.js" crossorigin></script>
     <script src='https://unpkg.com/react-router-dom@5.1.0/umd/react-router-dom.min.js'></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- Load our React component. -->
     {{navData|json_script:"nav-data"}}
     {{homePosts|json_script:"home-posts"}}
