added a noscript capability by using django templates

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -28,4 +28,34 @@
     {{contactPosts|json_script:"contact-posts"}}
     <!-- Load our React component. -->
     <script type="module" src="{% static 'js/app.js' %}"></script>
+    <noscript>
+        {% for homePost in homePosts %}
+            <h1>{{homePost.title}}</h1>
+            <p>{{homePost.content}}</p>
+        {% endfor %}
+        <br>
+        <br>
+        {% for aboutMePost in aboutMePosts %}
+            <h1>{{aboutMePost.title}}</h1>
+            <p>{{aboutMePost.content}}</p>
+        {% endfor %}
+        <br>
+        <br>
+        {% for projectPost in projectPosts %}
+            <h1>{{projectPost.title}}</h1>
+            <p>{{projectPost.content}}</p>
+        {% endfor %}
+        <br>
+        <br>
+        {% for workExpPost in workExpPosts %}
+            <h1>{{workExpPost.title}}</h1>
+            <p>{{workExpPost.content}}</p>
+        {% endfor %}
+        <br>
+        <br>
+        {% for contactPost in contactPosts %}
+            <h1>{{contactPost.title}}</h1>
+            <p>{{contactPost.content}}</p>
+        {% endfor %}
+    </noscript>
 </html>
